--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,7 @@
         </activity>
         <activity android:name="com.myapp.activity.MainActivity" android:screenOrientation="portrait"></activity>
         <activity android:name="com.myapp.activity.ResultActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="com.myapp.activity.MyViewpagerTest" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
