--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppBaseTheme" >
+        android:theme="@style/FullscreenTheme" >
         <activity
             android:name="com.myapp.activity.WelocomeActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
