--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:theme="@style/FullscreenTheme" >
         <activity
-            android:name="com.myapp.activity.WelocomeActivity"
+            android:name="com.myapp.activity.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme"
@@ -32,7 +32,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.myapp.activity.MainActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="com.myapp.activity.Test9Activity" android:screenOrientation="portrait"></activity>
         <activity android:name="com.myapp.activity.ResultActivity" android:screenOrientation="portrait"></activity>
         <activity android:name="com.myapp.activity.MyViewpagerTest" android:screenOrientation="portrait"></activity>
     </application>
